fix hero welcome txt alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2818,23 +2818,24 @@ input[type="submit"]:hover::before {
   border: 1px solid #bebebe;
 }
 
-.link-custom a:before {
+.link-custom span::after {
   content: "\f054";
   font-family: "Font Awesome 5 Free";
   display: inline-block;
   vertical-align: middle;
+  text-align: center;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 50%;
-  font-size: 10px;
+  font-size: 15px;
   font-weight: 600;
   height: 30px;
   width: 30px;
   line-height: 33px;
-  text-align: center;
+  /* text-align: center; */
   margin: 12px 20px;
-  background-color: #fff;
-  color: #000;
+  /* background-color: #fff; */
+  color: #fff;
   -webkit-transition: background 0.2s linear, color 0.2s linear;
   -o-transition: background 0.2s linear, color 0.2s linear;
   transition: background 0.2s linear, color 0.2s linear;
